--- a/css/add_rx.css
+++ b/css/add_rx.css
@@ -159,4 +159,15 @@
         font-size: 8px;
         margin-top: 5px;
     }
+
+    .rx-symbol {
+        margin-top: 20px;
+        text-align: left; /* or center depending on your layout */
+    }
+    
+    .rx-symbol img.rx-image {
+        width: 40px; /* adjust as needed */
+        height: 40;
+    }
+    
 }
